--- a/13-01.md
+++ b/13-01.md
@@ -34,8 +34,15 @@
 Ответьте на следующие вопросы:
 
 - Какие сетевые службы в ней разрешены?
+
+![alt text]([https://github.com/Anudora41/sys-insf-homeworks/edit/main/1.png)
+
+http, Openssh, ftp, telnet и отстальные, что есть на скриншоте
+  
 - Какие уязвимости были вами обнаружены? (список со ссылками: достаточно трёх уязвимостей)
   
+https://www.exploit-db.com/exploits/32849 - https://www.exploit-db.com/exploits/34896 - https://www.exploit-db.com/exploits/18011
+
 *Приведите ответ в свободной форме.*  
 
 ### Задание 2
@@ -50,3 +57,11 @@
 - Как отвечает сервер?
 
 *Приведите ответ в свободной форме.*
+
+В Режиме SYN буду отправлены TCP пакеты с флагом SYN на порты целевой машины. Сервер ответил SYN,ACK. В случаи закрытого порта будет отправлен пакет только RST.
+
+В Режиме FIN буду отправлены TCP пакеты с флагом FIN на порты целевой машины. Сервер ответил RST,ACK. Это помогает выявить фильтры с флагом FIN коротые игнарируют эти пакеты.
+
+В режиме Xmas сканирования отправлены флаги FIN, PSH. URG, сервер ответил RST,ACK. Так же помогает выявить фильтры, которые игнорируют пакеты с установленными флагами FIN, PSH и URG.
+
+В режиме UDP получен ответ ICMP что порт недоступен, сервер не ответил. UDP сканирование помогает выявить сервисы, работающие на UDP портах.
