--- a/13-02.md
+++ b/13-02.md
@@ -23,8 +23,11 @@
 2. Добавьте пользователя cryptouser.
 3. Зашифруйте домашний каталог пользователя с помощью eCryptfs.
 
+![alt text](https://github.com/Anudora41/sys-insf-homeworks/blob/main/1_1.png)
 
-*В качестве ответа  пришлите снимки экрана домашнего каталога пользователя с исходными и зашифрованными данными.*  
+![alt text](https://github.com/Anudora41/sys-insf-homeworks/blob/main/1_11.png)
+
+  
 
 ### Задание 2
 
@@ -32,9 +35,8 @@
 2. Создайте небольшой раздел, например, 100 Мб.
 3. Зашифруйте созданный раздел с помощью LUKS.
 
-*В качестве ответа пришлите снимки экрана с поэтапным выполнением задания.*
+![alt text](https://github.com/Anudora41/sys-insf-homeworks/blob/main/2_0.png)
 
+![alt text](https://github.com/Anudora41/sys-insf-homeworks/blob/main/2_1.png)
 
-## Дополнительные задания (со звёздочкой*)
-
-Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале
+![alt text](https://github.com/Anudora41/sys-insf-homeworks/blob/main/2_2.png)
