--- a/13-02.md
+++ b/13-02.md
@@ -7,6 +7,8 @@
 2. Добавьте пользователя cryptouser.
 3. Зашифруйте домашний каталог пользователя с помощью eCryptfs.
 
+   *В качестве ответа  пришлите снимки экрана домашнего каталога пользователя с исходными и зашифрованными данными.*
+
 ![alt text](https://github.com/Anudora41/sys-insf-homeworks/blob/main/1_1.png)
 
 ![alt text](https://github.com/Anudora41/sys-insf-homeworks/blob/main/1_11.png)
@@ -18,6 +20,8 @@
 1. Установите поддержку **LUKS**.
 2. Создайте небольшой раздел, например, 100 Мб.
 3. Зашифруйте созданный раздел с помощью LUKS.
+
+*В качестве ответа пришлите снимки экрана.*
 
 ![alt text](https://github.com/Anudora41/sys-insf-homeworks/blob/main/2_0.png)
 
